# solidity-language-server

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  FEATURES.md  LICENSE  README.md  alias.json  benchmark.yaml  build.rs  install.sh  package.json  public-key.asc  shop-ast.json  vocs.config.ts
.github/: release.json
.github/workflows/: preflight.yml  release.yml  test.yml
bench/: Cargo.toml
bench/results/: declaration.md  definition.md  diagnostics.md  documentSymbol.md  hover.md  references.md  spawn.md
bench/src/: main.rs
benchmarks/: #90.t.yaml  #90.yaml  alias-goto-decl-mytest-usage.yaml  alias-goto-def-afile-usage.yaml  alias-goto-def-mytest-usage.yaml  alias-goto-impl-mytest-import.yaml  alias-goto-impl-mytest-usage.yaml  alias-refs-afile-import.yaml  alias-refs-afile-usage.yaml  alias-refs-mytest-import.yaml  alias-refs-mytest-usage.yaml  call-hierarchy-getpool.yaml  call-hierarchy-initialize.yaml  call-hierarchy-unlock.yaml  call-hierarchy.yaml  ci-file-ops-verify.yaml  code-action-1400.yaml  code-action-2462.yaml  code-action-4126.yaml  code-action-8063.yaml  code-action-8113.yaml  code-action-9239.yaml  code-action-spdx.yaml  config.yaml  dhat-profile.yaml  example-references.yaml  example-rename-sequence.yaml  example-will-create.yaml  example-will-delete.yaml  example-will-rename.yaml  extsload-rename-sequence.yaml  pool-rename-sequence.yaml  pool.yaml  poolmanager-t-diag.yaml  poolmanager-t-file-ops.yaml  poolmanager-t.yaml  refs-manager-crossfile.yaml  refs-manager.yaml  servers.ci.yaml  servers.yaml  (+9 more)
benchmarks/#90/: 2026-02-18T11-10-23Z.json  2026-02-18T11-10-59Z.json  report.md  report.t.md
benchmarks/PR#77/: benchmark.yaml  v0.1.18.md
blog/: article1.md  article2.md  article3.md
data/: error_codes.json
docs/: COMPLETIONS.md  GOTO.md  HOVER.md  INLAY_HINTS.md  PROFILING.md  REFERENCES.md  WILL_RENAME_FILES.md  imports-references.md  using-the-compiler.rst
example/: A.sol  Alias.sol  B.sol  C.sol  Counter.sol  NoSpdx.sol  Pool.unformatted.snapshot  PoolManager.t.unformatted.snapshot  Shop.sol  Shop.unformatted.snapshot  StringCompletions.assembly.snapshot  StringCompletions.import-bare.snapshot  StringCompletions.import-from.snapshot  StringCompletions.revert.snapshot  StringCompletions.sol  StringCompletions.strvar.snapshot  foundry.toml  type.sol  type.yaml
notes/: COMPLETIONS.md  HOVER.md  PROFILING.md  REFERENCES.md  SIGNATURE_HELP.md  SYMBOLS.md
npm/: package.json
skills/: COMPLETIONS.md
src/: build.rs  call_hierarchy.rs  code_actions.rs  completion.rs  config.rs  file_operations.rs  folding.rs  gas.rs  goto.rs  highlight.rs  hover.rs  inlay_hints.rs  lib.rs  links.rs  lint.rs  lsp.rs  main.rs  project_cache.rs  references.rs  rename.rs  runner.rs  selection.rs  semantic_tokens.rs  solar_runner.rs  solc.rs  symbols.rs  types.rs  utils.rs
tests/: build.rs  completion.rs  cross_file_references.rs  document_links.rs  file_operations.rs  lint.rs  lsp_file_ops_settings.rs  rename.rs  symbols.rs  utils.rs  yul_external_references.rs
(+168 files in other folders)
