[package]
name = "solidity-language-server"
description = "A solidity language server with foundry's build process."
version = "0.1.10"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mmsaki/solidity-language-server"
repository = "https://github.com/mmsaki/solidity-language-server"
keywords = ["language-server", "solidity", "lsp"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
eyre = "0.6.12"
serde = "1.0.228"
serde_json = "1.0.145"
solar = { version = "=0.1.8", package = "solar-compiler", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
