[package]
name = "solidity-language-server"
description = "A fast Solidity language server powered by solc and Foundry"
version = "0.1.25"
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mmsaki/solidity-language-server"
repository = "https://github.com/mmsaki/solidity-language-server"
keywords = ["language-server", "solidity", "lsp"]
exclude = ["poolmanager.json", "v4-core"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
eyre = "0.6.12"
serde = "1.0.228"
serde_json = "1.0.145"
solar = { version = "=0.1.8", package = "solar-compiler", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-lsp = "0.20.0"
lintspec-core = { version = "0.15.0", default-features = false }
toml = "0.8"
glob = "0.3"
tree-sitter = "0.26.5"
tree-sitter-solidity = "1.2.13"
tiny-keccak = { version = "2.0", features = ["keccak"] }
pathdiff = "0.2"
hex = "0.4"
svm = { package = "svm-rs", version = "0.5", default-features = false, features = [
  "rustls",
] }
semver = "1"
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]

[profile.release]
debug = 1  # needed for DHAT backtraces

[[bin]]
name = "dhat-profile"
path = "src/bin/dhat_profile.rs"
required-features = ["dhat-heap"]
